Added more content to weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -828,6 +828,345 @@
 
 
     <!-- ========== ========== ========== ========== ==========
+    Dual Swords Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="dual" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dual Swords Smithing Texts</h2>
+            <img src="./img/dual_swords_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <!-- Wooden Dual Swords -->
+				<tr class="">
+					<td>Wooden Dual Swords</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Dual Blades</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+                <!-- Basket Blade & Boar-Cutter -->
+				<tr class="">
+					<td>Basket Blade & Boar-Cutter</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Roaming Artisan</a>
+					</td>
+				</tr>
+
+                <!-- Regal Lion & Bone Eater -->
+				<tr class="">
+					<td rowspan="2">Regal Lion & Bone Eater</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum of Evil</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wings of the Pheonix (Twilight Mission)</a>
+                    </td>
+                </tr>
+
+                <!-- Tarobo Kanemitsu & Rapier -->
+				<tr class="">
+					<td>Tarobo Kanemitsu & Rapier</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Yoshiaki (Seven Spears #3)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+                <!-- Ichigo Hitofuri & Oyako Toshiro -->
+				<tr class="">
+					<td>Ichigo Hitofuri & Oyako Toshiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+                <!-- Candlestick Slicer & Rigid Rapier -->
+				<tr class="">
+					<td rowspan="2">Candlestick Slicer & Rigid Rapier</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+                </tr>
+
+                <!-- Shokudakiri Mitsutada & Shinogito Shiro -->
+				<tr class="">
+					<td rowspan="2">Shokudakiri Mitsutada & Shinogito Shiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Little Crow & Quickdraw -->
+				<tr class="">
+					<td rowspan="2">Little Crow & Quickdraw</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Taira Revenant (Switchglaive or Odachi user)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Taira no Kagekiyo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Tale Of The Taira</a>
+					</td>
+				</tr>
+                <td>
+                    <a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
+                </td>
+                <td>
+                    <a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
+                </td>
+
+                <!-- Ogo & Nagamei Masamune -->
+				<tr class="">
+					<td>Ogo & Nagamei Masamune</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+                <!-- Great Kanehira Sword & Nightingale -->
+				<tr class="">
+					<td>Great Kanehira Sword & Nightingale</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ikeda Tsuneoki (Dual Swords human in tent before Tokichiro boss fight)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+
+                <!-- Bamboo Cutter & Bone Feaster -->
+				<tr class="">
+					<td>Bamboo Cutter & Bone Feaster</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Dual Blades</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+                <!-- Fudo Kuniyuki & Yagen Toshiro -->
+				<tr class="">
+					<td>Fudo Kuniyuki & Yagen Toshiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Matsunaga Hisahide</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Three Evils</a>
+					</td>
+				</tr>
+
+                <!-- Wisdom Sutra & Plane Cutter -->
+				<tr class="">
+					<td>Wisdom Sutra & Plane Cutter</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+                <!-- Daihannya Nagamitsu & Kannagiri -->
+				<tr class="">
+					<td>Daihannya Nagamitsu & Kannagiri</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+                <!-- Dual Bloodstained Cleavers -->
+				<tr class="">
+					<td>Dual Bloodstained Cleavers</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a>
+					</td>
+				</tr>
+
+                <!-- Weathered Bone & Bleached Twig -->
+				<tr class="">
+					<td rowspan="2">Weathered Bone & Bleached Twig</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitcahi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+                </tr>
+
+                <!-- Yamanba's Knives -->
+				<tr class="">
+					<td>Yamanba's Knives</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Yamanba</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Any Mission Containing A Yamanba</a>
+					</td>
+				</tr>
+
+                <!-- Sozasamonji Matsukurago -->
+				<tr class="">
+					<td>Sozasamonji Matsukurago</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+
+                <!-- Shichisei & Heishishorin -->
+				<tr class="">
+					<td rowspan="2">Shichisei & Heishishorin</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+                </tr>
+
+                <!-- Big Dipper Blade & Heishishorin-Ken -->
+				<tr class="">
+					<td rowspan="2">Big Dipper Blade & Heishishorin-Ken</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Tsuruga Masamune & Hocho Toshiro -->
+				<tr class="">
+					<td>Tsuruga Masamune & Hocho Toshiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Chi-Azamaru -->
+				<tr class="">
+					<td>Chi-Azamaru</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href=""></a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href=""></a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href=""></a>
+					</td>
+				</tr>
+            </table>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
