--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -851,9 +851,9 @@
                 <!-- ==========
                 Table Data
                 ========== -->
-                <!-- Wooden Dual Swords -->
-				<tr class="">
-					<td>Wooden Dual Swords</td>
+				<!-- Bamboo Cutter & Bone Feaster -->
+				<tr class="bg-dark-gray-2">
+					<td>Bamboo Cutter & Bone Feaster</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
 					</td>
@@ -863,7 +863,7 @@
 					</td>
 				</tr>
 
-                <!-- Basket Blade & Boar-Cutter -->
+				<!-- Basket Blade & Boar-Cutter -->
 				<tr class="">
 					<td>Basket Blade & Boar-Cutter</td>
 					<td>
@@ -874,49 +874,50 @@
 					</td>
 				</tr>
 
-                <!-- Regal Lion & Bone Eater -->
-				<tr class="">
-					<td rowspan="2">Regal Lion & Bone Eater</td>
+				<!-- Beardcutter & Hobbler -->
+				<tr class="bg-dark-gray-2">
+					<td>Beardcutter & Hobbler</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Watanabe No Tsuna</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Big Dipper Blade & Heishishorin-Ken -->
+				<tr class="">
+					<td rowspan="2">Big Dipper Blade & Heishishorin-Ken</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
 					</td>
 				</tr>
                 <tr>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
-                    </td>
-                    <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum of Evil</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Wings of the Pheonix (Twilight Mission)</a>
-                    </td>
-                </tr>
-
-                <!-- Tarobo Kanemitsu & Rapier -->
-				<tr class="">
-					<td>Tarobo Kanemitsu & Rapier</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Kato Yoshiaki (Seven Spears #3)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
 
-                <!-- Ichigo Hitofuri & Oyako Toshiro -->
-				<tr class="">
-					<td>Ichigo Hitofuri & Oyako Toshiro</td>
+				<!-- Bloodsucker & Spider Cutter -->
+				<tr class="bg-dark-gray-2">
+					<td>Bloodsucker & Spider Cutter</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Minamoto No Yorimitsu</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Suzune In The Flames</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
 					</td>
 				</tr>
 
-                <!-- Candlestick Slicer & Rigid Rapier -->
+				<!-- Candlestick Slicer & Rigid Rapier -->
 				<tr class="">
 					<td rowspan="2">Candlestick Slicer & Rigid Rapier</td>
 					<td>
@@ -936,7 +937,155 @@
 					</td>
                 </tr>
 
-                <!-- Shokudakiri Mitsutada & Shinogito Shiro -->
+				<!-- Chi-Azamaru -->
+				<tr class="bg-dark-gray-2">
+					<td>Chi-Azamaru</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Taira No Kagekiyo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Lost Sword</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Tale Of The Taira</a>
+					</td>
+				</tr>
+
+				<!-- Daihannya Nagamitsu & Kannagiri -->
+				<tr class="">
+					<td>Daihannya Nagamitsu & Kannagiri</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Daitoren & Shotoren -->
+				<tr class="bg-dark-gray-2">
+					<td>Daitoren & Shotoren</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>
+					</td>
+				</tr>
+
+				<!-- Dual Bloodstained Cleavers -->
+				<tr class="">
+					<td>Dual Bloodstained Cleavers</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a>
+					</td>
+				</tr>
+
+				<!-- Fudo Kuniyuki & Yagen Toshiro -->
+				<tr class="bg-dark-gray-2">
+					<td>Fudo Kuniyuki & Yagen Toshiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Matsunaga Hisahide</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Three Evils</a>
+					</td>
+				</tr>
+
+				<!-- Great Kanehira Sword & Nightingale -->
+				<tr class="">
+					<td>Great Kanehira Sword & Nightingale</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ikeda Tsuneoki (Dual Swords human in tent before Tokichiro boss fight)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+
+				<!-- Ichigo Hitofuri & Oyako Toshiro -->
+				<tr class="bg-dark-gray-2">
+					<td>Ichigo Hitofuri & Oyako Toshiro</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+				<!-- Little Crow & Quickdraw -->
+				<tr class="">
+					<td rowspan="2">Little Crow & Quickdraw</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Taira Revenant (Switchglaive or Odachi user)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Taira no Kagekiyo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Tale Of The Taira</a>
+					</td>
+				</tr>
+                <td>
+                    <a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
+                </td>
+                <td>
+                    <a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
+                </td>
+
+				<!-- Ogo & Nagamei Masamune -->
+				<tr class="bg-dark-gray-2">
+					<td>Ogo & Nagamei Masamune</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+				<!-- Regal Lion & Bone Eater -->
+				<tr class="">
+					<td rowspan="2">Regal Lion & Bone Eater</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum of Evil</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wings of the Pheonix (Twilight Mission)</a>
+                    </td>
+                </tr>
+
+				<!-- Shichisei & Heishishorin -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Shichisei & Heishishorin</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+                <tr class="bg-dark-gray-2">
+                    <td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+                </tr>
+
+				<!-- Shokudakiri Mitsutada & Shinogito Shiro -->
 				<tr class="">
 					<td rowspan="2">Shokudakiri Mitsutada & Shinogito Shiro</td>
 					<td>
@@ -956,104 +1105,42 @@
 					</td>
 				</tr>
 
-                <!-- Little Crow & Quickdraw -->
-				<tr class="">
-					<td rowspan="2">Little Crow & Quickdraw</td>
+				<!-- Sozasamonji Matsukurago -->
+				<tr class="bg-dark-gray-2">
+					<td>Sozasamonji Matsukurago</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Taira Revenant (Switchglaive or Odachi user)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Taira no Kagekiyo</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Tale Of The Taira</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
 					</td>
 				</tr>
-                <td>
-                    <a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
-                </td>
-                <td>
-                    <a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
-                </td>
 
-                <!-- Ogo & Nagamei Masamune -->
+				<!-- Tarobo Kanemitsu & Rapier -->
 				<tr class="">
-					<td>Ogo & Nagamei Masamune</td>
+					<td>Tarobo Kanemitsu & Rapier</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Yoshiaki (Seven Spears #3)</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
 					</td>
 				</tr>
 
-                <!-- Great Kanehira Sword & Nightingale -->
-				<tr class="">
-					<td>Great Kanehira Sword & Nightingale</td>
+				<!-- Tsuruga Masamune & Hocho Toshiro -->
+				<tr class="bg-dark-gray-2">
+					<td>Tsuruga Masamune & Hocho Toshiro</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Ikeda Tsuneoki (Dual Swords human in tent before Tokichiro boss fight)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
-					</td>
-				</tr>
-
-                <!-- Bamboo Cutter & Bone Feaster -->
-				<tr class="">
-					<td>Bamboo Cutter & Bone Feaster</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Dual Blades</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
 
-                <!-- Fudo Kuniyuki & Yagen Toshiro -->
-				<tr class="">
-					<td>Fudo Kuniyuki & Yagen Toshiro</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Matsunaga Hisahide</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Three Evils</a>
-					</td>
-				</tr>
-
-                <!-- Wisdom Sutra & Plane Cutter -->
-				<tr class="">
-					<td>Wisdom Sutra & Plane Cutter</td>
-					<td>
-						<span>-</span>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
-					</td>
-				</tr>
-
-                <!-- Daihannya Nagamitsu & Kannagiri -->
-				<tr class="">
-					<td>Daihannya Nagamitsu & Kannagiri</td>
-					<td>
-						<span>-</span>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
-					</td>
-				</tr>
-
-                <!-- Dual Bloodstained Cleavers -->
-				<tr class="">
-					<td>Dual Bloodstained Cleavers</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a>
-					</td>
-				</tr>
-
-                <!-- Weathered Bone & Bleached Twig -->
+				<!-- Weathered Bone & Bleached Twig -->
 				<tr class="">
 					<td rowspan="2">Weathered Bone & Bleached Twig</td>
 					<td>
@@ -1074,8 +1161,31 @@
 					</td>
                 </tr>
 
-                <!-- Yamanba's Knives -->
+				<!-- Wisdom Sutra & Plane Cutter -->
+				<tr class="bg-dark-gray-2">
+					<td>Wisdom Sutra & Plane Cutter</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Dual Swords -->
 				<tr class="">
+					<td>Wooden Dual Swords</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Master Of The Dual Blades</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Yamanba's Knives -->
+				<tr class="bg-dark-gray-2">
 					<td>Yamanba's Knives</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Yamanba</a>
@@ -1086,79 +1196,11 @@
 					</td>
 				</tr>
 
-                <!-- Sozasamonji Matsukurago -->
+				<!-- Demon Horde Dual Katana -->
 				<tr class="">
-					<td>Sozasamonji Matsukurago</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
-					</td>
-				</tr>
-
-                <!-- Shichisei & Heishishorin -->
-				<tr class="">
-					<td rowspan="2">Shichisei & Heishishorin</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
-					</td>
-				</tr>
-                <tr>
-                    <td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
-					</td>
-                </tr>
-
-                <!-- Big Dipper Blade & Heishishorin-Ken -->
-				<tr class="">
-					<td rowspan="2">Big Dipper Blade & Heishishorin-Ken</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
-					</td>
-				</tr>
-                <tr>
-                    <td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
-					</td>
-				</tr>
-
-                <!-- Tsuruga Masamune & Hocho Toshiro -->
-				<tr class="">
-					<td>Tsuruga Masamune & Hocho Toshiro</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
-					</td>
-				</tr>
-
-                <!-- Chi-Azamaru -->
-				<tr class="">
-					<td>Chi-Azamaru</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a>
-					</td>
-					<td>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a>
+					<td>Demon Horde Dual Katana</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
 					</td>
 				</tr>
             </table>
