--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -337,7 +337,8 @@
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
                     </td>
                 </tr>
 
@@ -647,8 +648,9 @@
                     </td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
                     </td>
                 </tr>
 
@@ -704,8 +706,9 @@
 					</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Wings of Phoenix (Twilight Mission)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 					</td>
 				</tr>
 
@@ -785,8 +788,9 @@
 					</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Wings of Phoenix (Twilight Mission)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 					</td>
 				</tr>
 
@@ -799,7 +803,8 @@
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 					</td>
 				</tr>
 
@@ -932,7 +937,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
                 </tr>
@@ -1060,8 +1065,10 @@
                         <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
                     </td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum of Evil</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Wings of the Pheonix (Twilight Mission)</a>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
                     </td>
                 </tr>
 
@@ -1100,7 +1107,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
@@ -1206,6 +1213,398 @@
             </table>
         </div>
     </section>
+
+
+	<!-- ========== ========== ========== ========== ==========
+    Spear Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="spear" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Spear Smithing Texts</h2>
+            <img src="./img/spear_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Wooden Spear -->
+				<tr class="">
+					<td>Wooden Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hanzo The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Bonepile Spear -->
+				<tr class="">
+					<td>Bonepile Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+				</tr>
+
+				<!-- Cross Spear -->
+				<tr class="">
+					<td>Cross Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Torch Spear -->
+				<tr class="">
+					<td rowspan="2">Torch Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tatarimokke</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Way Out</a>
+					</td>
+				</tr>
+
+				<!-- Coin Threader -->
+				<tr class="">
+					<td>Coin Threader</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hidetatsu's Dying Wish (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Koroka Spear -->
+				<tr class="">
+					<td>Koroka Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Koroka</a>
+					</td>
+					<td>
+						<span>Any Mission That Contains A Koroka</span>
+					</td>
+				</tr>
+
+				<!-- Tombokiri -->
+				<tr class="">
+					<td>Tombokiri</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Honda Tadakatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Horns On Head, Dragonfly In Hand</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Trustworthy</a>
+					</td>
+				</tr>
+
+				<!-- Red Demon Spear -->
+				<tr class="">
+					<td rowspan="5">Red Demon Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kasha</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Defiled Sanctuary (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Oni Shibata</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+
+				<!-- Realmtaker Spear -->
+				<tr class="">
+					<td rowspan="3">Realmtaker Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Two Faces of Hospitality</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Mataza's Long Spear -->
+				<tr class="">
+					<td>Mataza's Long Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mataza Of The Spear</a>
+					</td>
+				</tr>
+
+				<!-- Ningen Mukotsu -->
+				<tr class="">
+					<td>Ningen Mukotsu</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mori Nagayoshi (Spear wielding mini-boss in tent after getting Honda Tadakatsu as an ally)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+
+				<!-- Hanzo The Demon's Spear -->
+				<tr class="">
+					<td>Hanzo The Demon's Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hanzo The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Otegine -->
+				<tr class="">
+					<td rowspan="2">Otegine</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Vermillion Spear -->
+				<tr class="">
+					<td>Vermillion Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Maeda Keji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Bravest Of The Brave</a>
+					</td>
+				</tr>
+
+				<!-- Yamauba Spear -->
+				<tr class="">
+					<td>Yamauba Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Hinomotogo -->
+				<tr class="">
+					<td>Hinomotogo</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Fukushima Masanori (Seven Spears #2)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+				<!-- Tiger Of Higo's Spear -->
+				<tr class="">
+					<td rowspan="2">Tiger Of Higo's Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Kiyomasa (Seven Spears #7)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Great Chidori Cross Spear -->
+				<tr class="">
+					<td>Great Chidori Cross Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Great Holy Spear -->
+				<tr class="">
+					<td>Great Holy Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Great Halberd Of Hihiragi -->
+				<tr class="">
+					<td>Great Halberd Of Hihiragi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Sakon's Spear -->
+				<tr class="">
+					<td>Sakon's Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Swan Spear -->
+				<tr class="">
+					<td>Swan Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
+					</td>
+				</tr>
+
+				<!-- Bishamon Spear -->
+				<tr class="">
+					<td>Bishamon Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Urabe No Suetake</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Hayakaze Spear -->
+				<tr class="">
+					<td>Hayakaze Spear</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Nyotengu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Alluring Ancient</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Spear -->
+				<tr class="">
+					<td>Demon Horde Spear</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
 
 
     <!-- ========== ========== ========== ========== ==========
