--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -1240,7 +1240,7 @@
                 Table Data
                 ========== -->
 				<!-- Bishamon Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Bishamon Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Urabe No Suetake</a>
@@ -1263,7 +1263,7 @@
 				</tr>
 
 				<!-- Coin Threader -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Coin Threader</td>
 					<td>
 						<span>-</span>
@@ -1286,7 +1286,7 @@
 				</tr>
 
 				<!-- Great Chidori Cross Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Great Chidori Cross Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -1310,7 +1310,7 @@
 				</tr>
 
 				<!-- Great Holy Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Great Holy Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -1334,7 +1334,7 @@
 				</tr>
 
 				<!-- Hayakaze Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Hayakaze Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Nyotengu</a>
@@ -1356,7 +1356,7 @@
 				</tr>
 
 				<!-- Koroka Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Koroka Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Koroka</a>
@@ -1379,7 +1379,7 @@
 				</tr>
 
 				<!-- Ningen Mukotsu -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Ningen Mukotsu</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mori Nagayoshi (Spear wielding mini-boss in tent after getting Honda Tadakatsu as an ally)</a>
@@ -1409,7 +1409,7 @@
 				</tr>
 
 				<!-- Realmtaker Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="3">Realmtaker Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
@@ -1418,7 +1418,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Two Faces of Hospitality</a>
 					</td>
 				</tr>
-				<tr>
+				<tr class="bg-dark-gray-2">
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
 					</td>
@@ -1426,7 +1426,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
 					</td>
 				</tr>
-				<tr>
+				<tr class="bg-dark-gray-2">
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
 					</td>
@@ -1487,7 +1487,7 @@
 				</tr>
 
 				<!-- Sakon's Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Sakon's Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -1510,7 +1510,7 @@
 				</tr>
 
 				<!-- Tiger Of Higo's Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">Tiger Of Higo's Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kato Kiyomasa (Seven Spears #7)</a>
@@ -1519,7 +1519,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
 					</td>
 				</tr>
-				<tr>
+				<tr class="bg-dark-gray-2">
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
 					</td>
@@ -1541,7 +1541,7 @@
 				</tr>
 
 				<!-- Torch Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">Torch Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -1551,7 +1551,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
 					</td>
 				</tr>
-				<tr>
+				<tr class="bg-dark-gray-2">
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tatarimokke</a>
 					</td>
@@ -1572,7 +1572,7 @@
 				</tr>
 
 				<!-- Wooden Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Wooden Spear</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
@@ -1596,7 +1596,7 @@
 				</tr>
 
 				<!-- Demon Horde Spear -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Demon Horde Spear</td>
 					<td colspan="2">
                         <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
