Updated the kusarigama_logo.png. Added the Kusarigama Smithing Text section and completed it in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -1856,6 +1856,228 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Kusarigama Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="kusarigama" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Kusarigama Smithing Texts</h2>
+            <img src="./img/kusarigama_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Earthfall Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td>Earthfall Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Fuki's Kusarigama -->
+				<tr class="">
+					<td>Fuki's Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Fuki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Battle At The Temple</a>
+					</td>
+				</tr>
+
+				<!-- Kawanami Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td>Kawanami Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Shiftling's Wise Judgement</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Japanese Heart, Yokai Smarts</a>
+					</td>
+				</tr>
+
+				<!-- Mitsuyo Kusarigama -->
+				<tr class="">
+					<td>Mitsuyo Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nue</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Darkness Brewing (Twilight Mission)</a>
+					</td>
+				</tr>
+
+				<!-- Nightstorm Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">Nightstorm Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Rotten Rope Cutter -->
+				<tr class="">
+					<td>Rotten Rope Cutter</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+				</tr>
+
+				<!-- Shishido Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td>Shishido Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shisenin Kosen</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Chain That Splits The Sky</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Snowmelt Kusarigama -->
+				<tr class="">
+					<td>Snowmelt Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Suwa Myojin Sickle -->
+				<tr class="bg-dark-gray-2">
+					<td>Suwa Myojin Sickle</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tsuchigumo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a>
+					</td>
+				</tr>
+
+				<!-- Thunder God Kusarigama (Narukami) -->
+				<tr class="">
+					<td>Thunder God Kusarigama (Narukami)</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Tobikura Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Tobikura Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Magara Naotaka</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Corpses and Ice</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Brother's Blade</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cursed Castle Ruins (Twilight Mission)</a>
+					</td>
+				</tr>
+
+				<!-- Will-O'-Wisp Blade -->
+				<tr class="">
+					<td rowspan="2">Will - O'- Wisp Blade</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Kusarigama -->
+				<tr class="bg-dark-gray-2">
+					<td>Wooden Kusarigama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shisenin Kosen</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Chain That Splits The Sky</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Kusarigama -->
+				<tr class="">
+					<td>Demon Horde Kusarigama</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
