Added more content and finished the Odachi Smithing Text table in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -482,8 +482,9 @@
                     </td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Mountain Of The Dark Lord (Twilight Mission)</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain of the Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
                     </td>
                 </tr>
 
@@ -610,8 +611,9 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Enenra</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Beast Born of Smoke And Flames</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Beast Born of Smoke and Flames</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Okuni's Search</a>
 					</td>
 				</tr>
                 <tr class="bg-dark-gray-2">
@@ -1455,7 +1457,8 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain of the Dark Lord (Twilight Mission)</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
 					</td>
@@ -1793,8 +1796,9 @@
 					</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Mountain Of The Dark Lord (Twilight Mission)</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain of the Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
 					</td>
 				</tr>
 
@@ -2069,6 +2073,265 @@
 				<!-- Demon Horde Kusarigama -->
 				<tr class="">
 					<td>Demon Horde Kusarigama</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
+	<!-- ========== ========== ========== ========== ==========
+    Odachi Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="odachi" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Odachi Smithing Texts</h2>
+            <img src="./img/odachi_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Black Lacquer Long Sword -->
+				<tr class="bg-dark-gray-2">
+					<td>Black Lacquer Long Sword</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a>
+					</td>
+				</tr>
+
+				<!-- Bloodspider Blade -->
+				<tr class="">
+					<td>Bloodspider Blade</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a>
+					</td>
+					<td>
+						<span>Any mission that contains a Nure-Onna</span> 
+					</td>
+				</tr>
+
+				<!-- Bloodstained Blade -->
+				<tr class="bg-dark-gray-2">
+					<td>Bloodstained Blade</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
+					</td>
+					<td>
+						<span>Any mission that contains a Namahage</span>
+					</td>
+				</tr>
+
+				<!-- Firefly Blade -->
+				<tr class="">
+					<td rowspan="3">Firefly Blade</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Enenra</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Beast Born of Smoke and Flames</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Okuni's Search</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Futsunomitama -->
+				<tr class="bg-dark-gray-2">
+					<td>Futsunomitama</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Great Kanemitsu -->
+				<tr class="">
+					<td>Great Kanemitsu</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Toshimitsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Chinese Belleflower Dagger</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Ippon-Datara's Odachi -->
+				<tr class="bg-dark-gray-2">
+					<td>Ippon-Datara's Odachi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara (Odachi)</a>
+					</td>
+					<td>
+						<span>Any mission that has an Ippon-Datara (that wields an Odachi)</span>
+					</td>
+				</tr>
+
+				<!-- Jiro Tachi -->
+				<tr class="">
+					<td>Jiro Tachi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Magara Takamoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Corpses And Ice (Human mini-boss in arena before 3rd Shrine)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Brother's Blades (Walking Revenant in Dark Realm)</a>
+					</td>
+				</tr>
+
+				<!-- Kamui -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">Kamui</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Oni Shibata</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a>
+					</td>
+				</tr>
+
+				<!-- Nene Slayer -->
+				<tr class="">
+					<td>Nene Slayer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nue</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Darkness Brewing (Twilight Mission)</a>
+					</td>
+				</tr>
+
+				<!-- Ryomen Sukuna's Sword -->
+				<tr class="bg-dark-gray-2">
+					<td>Ryomen Sukuna's Sword</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain of the Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
+					</td>
+				</tr>
+
+				<!-- Sekishu Kazusada -->
+				<tr class="">
+					<td>Sekishu Kazusada</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Yamanaka Shikanosuke (Starting Revenant that must be killed to unlock the rest of the stage)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Prayer In Moonlight</a>
+					</td>
+				</tr>
+
+				<!-- Stone Splitter -->
+				<tr class="bg-dark-gray-2">
+					<td>Stone Splitter</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Usui Sadamitsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Taro Tachi -->
+				<tr class="">
+					<td>Taro Tachi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Magara Naotaka</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Corpses And Ice</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Brother's Blades</a>
+					</td>
+				</tr>
+
+				<!-- The Drying Pole -->
+				<tr class="bg-dark-gray-2">
+					<td>The Drying Pole</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Odachi -->
+				<tr class="">
+					<td>Wooden Odachi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shisenin Kosen</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Tengu's Blade</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Odachi -->
+				<tr class="bg-dark-gray-2">
+					<td>Demon Horde Odachi</td>
 					<td colspan="2">
                         <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
 					</td>
